--- a/python_indrajala/examples/importers/RawTests.ipynb
+++ b/python_indrajala/examples/importers/RawTests.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 102,
    "id": "1397bd8e-64d2-4ea1-b036-e6240c29b69d",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 103,
    "id": "2410cbec-a887-4dbb-9f16-2f556a3495bc",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 104,
    "id": "8b8a146f-53ce-4f32-a2a6-f36932118e51",
    "metadata": {},
    "outputs": [
@@ -72,16 +72,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-07-17 16:01:06,566 INFO root processing: data_sources/EuropeanMeanTemperatureSinceRomanTime_EuroMed2k.toml\n",
+      "2022-07-17 16:17:27,251 INFO root processing: data_sources/EuropeanMeanTemperatureSinceRomanTime_EuroMed2k.toml\n",
       "/home/dsc/gith/domschl/indrajala/python_indrajala/examples/importers/downloader.py:64: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
       "  self.log.error(\"Transform {t[0]} isn't available!\")\n",
-      "2022-07-17 16:01:06,578 INFO root processing: data_sources/DWDGermanJulyMeanTemperature.toml\n",
-      "2022-07-17 16:01:06,583 INFO root processing: data_sources/DWDGermanJuneMeanTemperature.toml\n",
-      "2022-07-17 16:01:06,587 INFO root processing: data_sources/DWDGermanAugustMeanTemperature.toml\n",
-      "2022-07-17 16:01:06,592 INFO root processing: data_sources/11000yearsunspotnumber.toml\n",
-      "2022-07-17 16:01:06,598 INFO root processing: data_sources/GISP2IceCoreTemperatureAlley2004.toml\n",
-      "2022-07-17 16:01:06,606 INFO root processing: data_sources/WikipediaGeologicTimeScales.toml\n",
-      "2022-07-17 16:01:06,748 INFO root processing: data_sources/SunspotsMonthlyMean.toml\n"
+      "2022-07-17 16:17:27,264 INFO root processing: data_sources/DWDGermanJulyMeanTemperature.toml\n",
+      "2022-07-17 16:17:27,270 INFO root processing: data_sources/DWDGermanJuneMeanTemperature.toml\n",
+      "2022-07-17 16:17:27,275 INFO root processing: data_sources/DWDGermanAugustMeanTemperature.toml\n",
+      "2022-07-17 16:17:27,369 INFO root processing: data_sources/11000yearsunspotnumber.toml\n",
+      "2022-07-17 16:17:27,376 INFO root processing: data_sources/GISP2IceCoreTemperatureAlley2004.toml\n",
+      "2022-07-17 16:17:27,384 INFO root processing: data_sources/WikipediaGeologicTimeScales.toml\n",
+      "2022-07-17 16:17:27,529 INFO root processing: data_sources/SunspotsMonthlyMean.toml\n"
      ]
     }
    ],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 105,
    "id": "c248bb65-8f1e-4044-8d6e-d5cbde9bbab7",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
        "dict_keys(['euromed2k', 'germany_july_meantemp', 'germany_june_meantemp', 'germany_august_meantemp', 'sunspots11000yrs', 'gisp2icecoretemp', 'gisp2icecoreaccum', 'geologictimescale', 'sunspotsmonthlymean1749'])"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 106,
    "id": "f1da5ae5-d097-44af-ac96-5e658c11f475",
    "metadata": {},
    "outputs": [
@@ -152,8 +152,8 @@
        "      <td>1</td>\n",
        "      <td>1749.042</td>\n",
        "      <td>96.7</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -161,8 +161,8 @@
        "      <td>2</td>\n",
        "      <td>1749.123</td>\n",
        "      <td>104.3</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -170,8 +170,8 @@
        "      <td>3</td>\n",
        "      <td>1749.204</td>\n",
        "      <td>116.7</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -179,8 +179,8 @@
        "      <td>4</td>\n",
        "      <td>1749.288</td>\n",
        "      <td>92.8</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -188,8 +188,8 @@
        "      <td>5</td>\n",
        "      <td>1749.371</td>\n",
        "      <td>141.7</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>-1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -207,7 +207,7 @@
        "      <td>2022.122</td>\n",
        "      <td>59.7</td>\n",
        "      <td>13.1</td>\n",
-       "      <td>1044</td>\n",
+       "      <td>1044.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3278</th>\n",
@@ -216,7 +216,7 @@
        "      <td>2022.204</td>\n",
        "      <td>78.5</td>\n",
        "      <td>13.9</td>\n",
-       "      <td>1277</td>\n",
+       "      <td>1277.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3279</th>\n",
@@ -225,7 +225,7 @@
        "      <td>2022.286</td>\n",
        "      <td>84.1</td>\n",
        "      <td>15.2</td>\n",
-       "      <td>1237</td>\n",
+       "      <td>1237.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3280</th>\n",
@@ -234,7 +234,7 @@
        "      <td>2022.371</td>\n",
        "      <td>96.5</td>\n",
        "      <td>16.0</td>\n",
-       "      <td>1250</td>\n",
+       "      <td>1250.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3281</th>\n",
@@ -243,7 +243,7 @@
        "      <td>2022.453</td>\n",
        "      <td>70.5</td>\n",
        "      <td>12.9</td>\n",
-       "      <td>1219</td>\n",
+       "      <td>1219.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -252,22 +252,22 @@
       ],
       "text/plain": [
        "      Year  Month  FracYear  MonthlyMean  StdDev  ObsCount\n",
-       "0     1749      1  1749.042         96.7    -1.0        -1\n",
-       "1     1749      2  1749.123        104.3    -1.0        -1\n",
-       "2     1749      3  1749.204        116.7    -1.0        -1\n",
-       "3     1749      4  1749.288         92.8    -1.0        -1\n",
-       "4     1749      5  1749.371        141.7    -1.0        -1\n",
+       "0     1749      1  1749.042         96.7     NaN       NaN\n",
+       "1     1749      2  1749.123        104.3     NaN       NaN\n",
+       "2     1749      3  1749.204        116.7     NaN       NaN\n",
+       "3     1749      4  1749.288         92.8     NaN       NaN\n",
+       "4     1749      5  1749.371        141.7     NaN       NaN\n",
        "...    ...    ...       ...          ...     ...       ...\n",
-       "3277  2022      2  2022.122         59.7    13.1      1044\n",
-       "3278  2022      3  2022.204         78.5    13.9      1277\n",
-       "3279  2022      4  2022.286         84.1    15.2      1237\n",
-       "3280  2022      5  2022.371         96.5    16.0      1250\n",
-       "3281  2022      6  2022.453         70.5    12.9      1219\n",
+       "3277  2022      2  2022.122         59.7    13.1    1044.0\n",
+       "3278  2022      3  2022.204         78.5    13.9    1277.0\n",
+       "3279  2022      4  2022.286         84.1    15.2    1237.0\n",
+       "3280  2022      5  2022.371         96.5    16.0    1250.0\n",
+       "3281  2022      6  2022.453         70.5    12.9    1219.0\n",
        "\n",
        "[3282 rows x 6 columns]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
