--- a/python_indrajala/examples/importers/RawTests.ipynb
+++ b/python_indrajala/examples/importers/RawTests.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "8b8a146f-53ce-4f32-a2a6-f36932118e51",
    "metadata": {},
    "outputs": [
@@ -63,16 +63,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-07-17 16:52:05,396 INFO root processing: data_sources/EuropeanMeanTemperatureSinceRomanTime_EuroMed2k.toml\n",
-      "/Users/dsc/gith/domschl/indrajala/python_indrajala/examples/importers/downloader.py:64: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
-      "  return pd.read_csv(io.StringIO(data), sep=sep)\n",
-      "2022-07-17 16:52:05,408 INFO root processing: data_sources/WikipediaGeologicTimeScales.toml\n",
-      "2022-07-17 16:52:05,540 INFO root processing: data_sources/DWDGermanJuneMeanTemperature.toml\n",
-      "2022-07-17 16:52:05,543 INFO root processing: data_sources/11000yearsunspotnumber.toml\n",
-      "2022-07-17 16:52:05,547 INFO root processing: data_sources/DWDGermanAugustMeanTemperature.toml\n",
-      "2022-07-17 16:52:05,550 INFO root processing: data_sources/DWDGermanJulyMeanTemperature.toml\n",
-      "2022-07-17 16:52:05,553 INFO root processing: data_sources/SunspotsMonthlyMean.toml\n",
-      "2022-07-17 16:52:05,558 INFO root processing: data_sources/GISP2IceCoreTemperatureAlley2004.toml\n"
+      "2022-07-19 10:04:57,666 INFO root processing: data_sources/DWDGermanJulyMeanTemperature.toml\n",
+      "2022-07-19 10:04:57,672 INFO root processing: data_sources/SunspotsMonthlyMean.toml\n",
+      "2022-07-19 10:04:57,684 INFO root processing: data_sources/DWDGermanAugustMeanTemperature.toml\n",
+      "2022-07-19 10:04:57,692 INFO root processing: data_sources/GISP2IceCoreTemperatureAlley2004.toml\n",
+      "2022-07-19 10:04:59,510 INFO root processing: data_sources/11000yearsunspotnumber.toml\n",
+      "2022-07-19 10:05:08,559 INFO root processing: data_sources/DWDGermanJuneMeanTemperature.toml\n",
+      "2022-07-19 10:05:08,691 INFO root processing: data_sources/WikipediaGeologicTimeScales.toml\n",
+      "2022-07-19 10:05:09,273 INFO root processing: data_sources/EuropeanMeanTemperatureSinceRomanTime_EuroMed2k.toml\n",
+      "/home/dsc/gith/domschl/indrajala/python_indrajala/examples/importers/downloader.py:64: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
+      "  return pd.read_csv(io.StringIO(data), sep=sep)\n"
      ]
     }
    ],
@@ -82,17 +82,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "c248bb65-8f1e-4044-8d6e-d5cbde9bbab7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['euromed2k', 'geologictimescale', 'germany_june_meantemp', 'sunspots11000yrs', 'germany_august_meantemp', 'germany_july_meantemp', 'sunspotsmonthlymean1749', 'gisp2icecoretemp', 'gisp2icecoreaccum'])"
+       "dict_keys(['germany_july_meantemp', 'sunspotsmonthlymean1749', 'germany_august_meantemp', 'gisp2icecoretemp', 'gisp2icecoreaccum', 'sunspots11000yrs', 'germany_june_meantemp', 'geologictimescale', 'euromed2k'])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "f1da5ae5-d097-44af-ac96-5e658c11f475",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
        "[3282 rows x 6 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "id": "5fc4bec9-f38d-45d3-8cfb-c4b0268a5db1",
    "metadata": {},
    "outputs": [],
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "id": "fa8c7a92-3a0e-457a-9270-5707fcba3d95",
    "metadata": {},
    "outputs": [],
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "id": "f1d07e30-3faf-44f2-af97-4882865ced25",
    "metadata": {},
    "outputs": [],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "id": "87570714-a46b-4a7a-bfb0-32df3b8b1c79",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
        "17.553569739952717"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "id": "e31a53e5-85da-423d-b33e-c9d5ea129852",
    "metadata": {},
    "outputs": [],
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "id": "2bb28d24-631e-482b-802b-b06cfa1fcadf",
    "metadata": {},
    "outputs": [],
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "id": "0bbb81bb-2d24-4047-92c3-20a74de40fe0",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 17,
    "id": "55f45fd0-9695-4d3b-bc39-4c9eecf91d9f",
    "metadata": {},
    "outputs": [],
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 18,
    "id": "105c73a6-9126-4168-ba98-3f00a799808d",
    "metadata": {},
    "outputs": [
@@ -390,7 +390,7 @@
        "       39.7800995 , 39.94577114])"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,17 +401,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
    "id": "6b37388c-3068-423e-8f24-3924ccbf2a38",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((3262,), (3282, 6))"
+       "((3082,), (3282, 6))"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 22,
    "id": "a5121968-0c17-4992-a32c-1def16c1eab9",
    "metadata": {},
    "outputs": [],
@@ -433,17 +433,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 23,
    "id": "ed2109e7-df55-47e8-afee-b70515132808",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x140325bd0>]"
+       "[<matplotlib.lines.Line2D at 0xfffe9f01a620>]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
