--- a/python_indrajala/examples/importers/RawTests.ipynb
+++ b/python_indrajala/examples/importers/RawTests.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "1397bd8e-64d2-4ea1-b036-e6240c29b69d",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "2410cbec-a887-4dbb-9f16-2f556a3495bc",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "8b8a146f-53ce-4f32-a2a6-f36932118e51",
    "metadata": {},
    "outputs": [
@@ -63,16 +63,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-07-19 10:04:57,666 INFO root processing: data_sources/DWDGermanJulyMeanTemperature.toml\n",
-      "2022-07-19 10:04:57,672 INFO root processing: data_sources/SunspotsMonthlyMean.toml\n",
-      "2022-07-19 10:04:57,684 INFO root processing: data_sources/DWDGermanAugustMeanTemperature.toml\n",
-      "2022-07-19 10:04:57,692 INFO root processing: data_sources/GISP2IceCoreTemperatureAlley2004.toml\n",
-      "2022-07-19 10:04:59,510 INFO root processing: data_sources/11000yearsunspotnumber.toml\n",
-      "2022-07-19 10:05:08,559 INFO root processing: data_sources/DWDGermanJuneMeanTemperature.toml\n",
-      "2022-07-19 10:05:08,691 INFO root processing: data_sources/WikipediaGeologicTimeScales.toml\n",
-      "2022-07-19 10:05:09,273 INFO root processing: data_sources/EuropeanMeanTemperatureSinceRomanTime_EuroMed2k.toml\n",
+      "2022-07-22 16:24:52,470 INFO root processing: data_sources/EuropeanMeanTemperatureSinceRomanTime_EuroMed2k.toml\n",
       "/home/dsc/gith/domschl/indrajala/python_indrajala/examples/importers/downloader.py:64: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
-      "  return pd.read_csv(io.StringIO(data), sep=sep)\n"
+      "  return pd.read_csv(io.StringIO(data), sep=sep)\n",
+      "2022-07-22 16:24:52,482 INFO root processing: data_sources/DWDGermanJulyMeanTemperature.toml\n",
+      "2022-07-22 16:24:52,488 INFO root processing: data_sources/DWDGermanJuneMeanTemperature.toml\n",
+      "2022-07-22 16:24:52,493 INFO root processing: data_sources/DWDGermanAugustMeanTemperature.toml\n",
+      "2022-07-22 16:24:52,497 INFO root processing: data_sources/11000yearsunspotnumber.toml\n",
+      "2022-07-22 16:24:52,503 INFO root processing: data_sources/GISP2IceCoreTemperatureAlley2004.toml\n",
+      "2022-07-22 16:24:52,511 INFO root processing: data_sources/WikipediaGeologicTimeScales.toml\n",
+      "2022-07-22 16:24:52,647 INFO root processing: data_sources/SunspotsMonthlyMean.toml\n",
+      "2022-07-22 16:24:52,654 INFO root processing: data_sources/EarlyCenozoicLiverwortBryocarbCO2Data.toml\n"
      ]
     }
    ],
@@ -82,17 +83,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "c248bb65-8f1e-4044-8d6e-d5cbde9bbab7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['germany_july_meantemp', 'sunspotsmonthlymean1749', 'germany_august_meantemp', 'gisp2icecoretemp', 'gisp2icecoreaccum', 'sunspots11000yrs', 'germany_june_meantemp', 'geologictimescale', 'euromed2k'])"
+       "dict_keys(['euromed2k', 'germany_july_meantemp', 'germany_june_meantemp', 'germany_august_meantemp', 'sunspots11000yrs', 'gisp2icecoretemp', 'gisp2icecoreaccum', 'geologictimescale', 'sunspotsmonthlymean1749', 'CenozoicCO2'])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "f1da5ae5-d097-44af-ac96-5e658c11f475",
    "metadata": {},
    "outputs": [
@@ -128,143 +129,190 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Month</th>\n",
-       "      <th>FracYear</th>\n",
-       "      <th>MonthlyMean</th>\n",
-       "      <th>StdDev</th>\n",
-       "      <th>ObsCount</th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Unnamed: 1</th>\n",
+       "      <th>Unnamed: 2</th>\n",
+       "      <th>Unnamed: 3</th>\n",
+       "      <th>Unnamed: 4</th>\n",
+       "      <th>Unnamed: 5</th>\n",
+       "      <th>Unnamed: 6</th>\n",
+       "      <th>Unnamed: 7</th>\n",
+       "      <th>Unnamed: 8</th>\n",
+       "      <th>Unnamed: 9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Unnamed: 70</th>\n",
+       "      <th>Unnamed: 71</th>\n",
+       "      <th>Unnamed: 72</th>\n",
+       "      <th>Unnamed: 73</th>\n",
+       "      <th>Unnamed: 74</th>\n",
+       "      <th>Unnamed: 75</th>\n",
+       "      <th>Unnamed: 76</th>\n",
+       "      <th>Unnamed: 77</th>\n",
+       "      <th>Unnamed: 78</th>\n",
+       "      <th>Unnamed: 79</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1749</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1749.042</td>\n",
-       "      <td>96.7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1749</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1749.123</td>\n",
-       "      <td>104.3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>proxy</td>\n",
+       "      <td>first_author_last_name</td>\n",
+       "      <td>publication_year</td>\n",
+       "      <td>doi</td>\n",
+       "      <td>age_ka</td>\n",
+       "      <td>Age_uncertainty_pos_ka</td>\n",
+       "      <td>Age_uncertainty_neg_ka</td>\n",
+       "      <td>CO2_ppm</td>\n",
+       "      <td>CO2_uncertainty_pos_ppm</td>\n",
+       "      <td>CO2_uncertainty_neg_ppm</td>\n",
+       "      <td>...</td>\n",
+       "      <td>cloud</td>\n",
+       "      <td>cloud_err</td>\n",
+       "      <td>N_cloud_err</td>\n",
+       "      <td>LAI</td>\n",
+       "      <td>LAI_err</td>\n",
+       "      <td>N_LAI_err</td>\n",
+       "      <td>attenuation</td>\n",
+       "      <td>atten_err</td>\n",
+       "      <td>N_atten_err</td>\n",
+       "      <td>general notes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1749</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1749.204</td>\n",
-       "      <td>116.7</td>\n",
+       "      <td>liverworts</td>\n",
+       "      <td>Fletcher</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>10.1038/ngeo.2007.29 and 10.1111/j.1472-4669.2...</td>\n",
+       "      <td>52200</td>\n",
+       "      <td>3600.0</td>\n",
+       "      <td>3600.0</td>\n",
+       "      <td>1967</td>\n",
+       "      <td>1534</td>\n",
+       "      <td>875</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>taken from Fletcher et al. (2008); no error is...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>taken from Fletcher et al. (2008); the combine...</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>taken from Fletcher et al. (2008); no error is...</td>\n",
+       "      <td>Inputs measured but CO2 not reported in Fletch...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1749</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1749.288</td>\n",
-       "      <td>92.8</td>\n",
+       "      <td>liverworts</td>\n",
+       "      <td>Fletcher</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>10.1038/ngeo.2007.29</td>\n",
+       "      <td>60400</td>\n",
+       "      <td>4600.0</td>\n",
+       "      <td>4600.0</td>\n",
+       "      <td>683</td>\n",
+       "      <td>199</td>\n",
+       "      <td>201</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>taken from Fletcher et al. (2008); no error is...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1749</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1749.371</td>\n",
-       "      <td>141.7</td>\n",
+       "      <td>taken from Fletcher et al. (2008); the combine...</td>\n",
+       "      <td>0.5</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3277</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2022.122</td>\n",
-       "      <td>59.7</td>\n",
-       "      <td>13.1</td>\n",
-       "      <td>1044.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3278</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2022.204</td>\n",
-       "      <td>78.5</td>\n",
-       "      <td>13.9</td>\n",
-       "      <td>1277.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3279</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2022.286</td>\n",
-       "      <td>84.1</td>\n",
-       "      <td>15.2</td>\n",
-       "      <td>1237.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3280</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2022.371</td>\n",
-       "      <td>96.5</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>1250.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3281</th>\n",
-       "      <td>2022</td>\n",
-       "      <td>6</td>\n",
-       "      <td>2022.453</td>\n",
-       "      <td>70.5</td>\n",
-       "      <td>12.9</td>\n",
-       "      <td>1219.0</td>\n",
+       "      <td>taken from Fletcher et al. (2008); no error is...</td>\n",
+       "      <td>data doi: and 10.1111/j.1472-4669.2012.00320.x</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3282 rows × 6 columns</p>\n",
+       "<p>4 rows × 80 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Year  Month  FracYear  MonthlyMean  StdDev  ObsCount\n",
-       "0     1749      1  1749.042         96.7     NaN       NaN\n",
-       "1     1749      2  1749.123        104.3     NaN       NaN\n",
-       "2     1749      3  1749.204        116.7     NaN       NaN\n",
-       "3     1749      4  1749.288         92.8     NaN       NaN\n",
-       "4     1749      5  1749.371        141.7     NaN       NaN\n",
-       "...    ...    ...       ...          ...     ...       ...\n",
-       "3277  2022      2  2022.122         59.7    13.1    1044.0\n",
-       "3278  2022      3  2022.204         78.5    13.9    1277.0\n",
-       "3279  2022      4  2022.286         84.1    15.2    1237.0\n",
-       "3280  2022      5  2022.371         96.5    16.0    1250.0\n",
-       "3281  2022      6  2022.453         70.5    12.9    1219.0\n",
+       "   Unnamed: 0              Unnamed: 1        Unnamed: 2  \\\n",
+       "0         NaN                     NaN               NaN   \n",
+       "1       proxy  first_author_last_name  publication_year   \n",
+       "2  liverworts                Fletcher              2008   \n",
+       "3  liverworts                Fletcher              2008   \n",
        "\n",
-       "[3282 rows x 6 columns]"
+       "                                          Unnamed: 3 Unnamed: 4  \\\n",
+       "0                                                NaN        NaN   \n",
+       "1                                                doi     age_ka   \n",
+       "2  10.1038/ngeo.2007.29 and 10.1111/j.1472-4669.2...      52200   \n",
+       "3                               10.1038/ngeo.2007.29      60400   \n",
+       "\n",
+       "               Unnamed: 5              Unnamed: 6 Unnamed: 7  \\\n",
+       "0                     NaN                     NaN        NaN   \n",
+       "1  Age_uncertainty_pos_ka  Age_uncertainty_neg_ka    CO2_ppm   \n",
+       "2                  3600.0                  3600.0       1967   \n",
+       "3                  4600.0                  4600.0        683   \n",
+       "\n",
+       "                Unnamed: 8               Unnamed: 9  ... Unnamed: 70  \\\n",
+       "0                      NaN                      NaN  ...         NaN   \n",
+       "1  CO2_uncertainty_pos_ppm  CO2_uncertainty_neg_ppm  ...       cloud   \n",
+       "2                     1534                      875  ...        0.55   \n",
+       "3                      199                      201  ...        0.55   \n",
+       "\n",
+       "  Unnamed: 71                                        Unnamed: 72 Unnamed: 73  \\\n",
+       "0         NaN                                                NaN         NaN   \n",
+       "1   cloud_err                                        N_cloud_err         LAI   \n",
+       "2         NaN  taken from Fletcher et al. (2008); no error is...         NaN   \n",
+       "3         NaN  taken from Fletcher et al. (2008); no error is...         NaN   \n",
+       "\n",
+       "  Unnamed: 74                                        Unnamed: 75  Unnamed: 76  \\\n",
+       "0         NaN                                                NaN          NaN   \n",
+       "1     LAI_err                                          N_LAI_err  attenuation   \n",
+       "2         NaN  taken from Fletcher et al. (2008); the combine...          0.5   \n",
+       "3         NaN  taken from Fletcher et al. (2008); the combine...          0.5   \n",
+       "\n",
+       "  Unnamed: 77                                        Unnamed: 78  \\\n",
+       "0         NaN                                                NaN   \n",
+       "1   atten_err                                        N_atten_err   \n",
+       "2         NaN  taken from Fletcher et al. (2008); no error is...   \n",
+       "3         NaN  taken from Fletcher et al. (2008); no error is...   \n",
+       "\n",
+       "                                         Unnamed: 79  \n",
+       "0                                                NaN  \n",
+       "1                                      general notes  \n",
+       "2  Inputs measured but CO2 not reported in Fletch...  \n",
+       "3     data doi: and 10.1111/j.1472-4669.2012.00320.x  \n",
+       "\n",
+       "[4 rows x 80 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfs['sunspotsmonthlymean1749']"
+    "dfs['CenozoicCO2']"
    ]
   },
   {
