--- a/python_indrajala/examples/importers/RawTests.ipynb
+++ b/python_indrajala/examples/importers/RawTests.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "9b8d5e7f-9794-4e2e-b12b-0db2fbfdbbfe",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "1397bd8e-64d2-4ea1-b036-e6240c29b69d",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "2410cbec-a887-4dbb-9f16-2f556a3495bc",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "8b8a146f-53ce-4f32-a2a6-f36932118e51",
    "metadata": {},
    "outputs": [
@@ -63,17 +63,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-07-22 16:24:52,470 INFO root processing: data_sources/EuropeanMeanTemperatureSinceRomanTime_EuroMed2k.toml\n",
+      "2022-07-22 16:28:58,845 INFO root processing: data_sources/EuropeanMeanTemperatureSinceRomanTime_EuroMed2k.toml\n",
       "/home/dsc/gith/domschl/indrajala/python_indrajala/examples/importers/downloader.py:64: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
       "  return pd.read_csv(io.StringIO(data), sep=sep)\n",
-      "2022-07-22 16:24:52,482 INFO root processing: data_sources/DWDGermanJulyMeanTemperature.toml\n",
-      "2022-07-22 16:24:52,488 INFO root processing: data_sources/DWDGermanJuneMeanTemperature.toml\n",
-      "2022-07-22 16:24:52,493 INFO root processing: data_sources/DWDGermanAugustMeanTemperature.toml\n",
-      "2022-07-22 16:24:52,497 INFO root processing: data_sources/11000yearsunspotnumber.toml\n",
-      "2022-07-22 16:24:52,503 INFO root processing: data_sources/GISP2IceCoreTemperatureAlley2004.toml\n",
-      "2022-07-22 16:24:52,511 INFO root processing: data_sources/WikipediaGeologicTimeScales.toml\n",
-      "2022-07-22 16:24:52,647 INFO root processing: data_sources/SunspotsMonthlyMean.toml\n",
-      "2022-07-22 16:24:52,654 INFO root processing: data_sources/EarlyCenozoicLiverwortBryocarbCO2Data.toml\n"
+      "2022-07-22 16:28:58,858 INFO root processing: data_sources/DWDGermanJulyMeanTemperature.toml\n",
+      "2022-07-22 16:28:58,863 INFO root processing: data_sources/DWDGermanJuneMeanTemperature.toml\n",
+      "2022-07-22 16:28:58,868 INFO root processing: data_sources/DWDGermanAugustMeanTemperature.toml\n",
+      "2022-07-22 16:28:58,872 INFO root processing: data_sources/11000yearsunspotnumber.toml\n",
+      "2022-07-22 16:28:58,877 INFO root processing: data_sources/GISP2IceCoreTemperatureAlley2004.toml\n",
+      "2022-07-22 16:28:58,885 INFO root processing: data_sources/WikipediaGeologicTimeScales.toml\n",
+      "2022-07-22 16:28:59,035 INFO root processing: data_sources/SunspotsMonthlyMean.toml\n",
+      "2022-07-22 16:28:59,042 INFO root processing: data_sources/EarlyCenozoicLiverwortBryocarbCO2Data.toml\n"
      ]
     }
    ],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "c248bb65-8f1e-4044-8d6e-d5cbde9bbab7",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
        "dict_keys(['euromed2k', 'germany_july_meantemp', 'germany_june_meantemp', 'germany_august_meantemp', 'sunspots11000yrs', 'gisp2icecoretemp', 'gisp2icecoreaccum', 'geologictimescale', 'sunspotsmonthlymean1749', 'CenozoicCO2'])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "f1da5ae5-d097-44af-ac96-5e658c11f475",
    "metadata": {},
    "outputs": [
@@ -129,80 +129,32 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>Unnamed: 1</th>\n",
-       "      <th>Unnamed: 2</th>\n",
-       "      <th>Unnamed: 3</th>\n",
-       "      <th>Unnamed: 4</th>\n",
-       "      <th>Unnamed: 5</th>\n",
-       "      <th>Unnamed: 6</th>\n",
-       "      <th>Unnamed: 7</th>\n",
-       "      <th>Unnamed: 8</th>\n",
-       "      <th>Unnamed: 9</th>\n",
+       "      <th>proxy</th>\n",
+       "      <th>first_author_last_name</th>\n",
+       "      <th>publication_year</th>\n",
+       "      <th>doi</th>\n",
+       "      <th>age_ka</th>\n",
+       "      <th>Age_uncertainty_pos_ka</th>\n",
+       "      <th>Age_uncertainty_neg_ka</th>\n",
+       "      <th>CO2_ppm</th>\n",
+       "      <th>CO2_uncertainty_pos_ppm</th>\n",
+       "      <th>CO2_uncertainty_neg_ppm</th>\n",
        "      <th>...</th>\n",
-       "      <th>Unnamed: 70</th>\n",
-       "      <th>Unnamed: 71</th>\n",
-       "      <th>Unnamed: 72</th>\n",
-       "      <th>Unnamed: 73</th>\n",
-       "      <th>Unnamed: 74</th>\n",
-       "      <th>Unnamed: 75</th>\n",
-       "      <th>Unnamed: 76</th>\n",
-       "      <th>Unnamed: 77</th>\n",
-       "      <th>Unnamed: 78</th>\n",
-       "      <th>Unnamed: 79</th>\n",
+       "      <th>cloud</th>\n",
+       "      <th>cloud_err</th>\n",
+       "      <th>N_cloud_err</th>\n",
+       "      <th>LAI</th>\n",
+       "      <th>LAI_err</th>\n",
+       "      <th>N_LAI_err</th>\n",
+       "      <th>attenuation</th>\n",
+       "      <th>atten_err</th>\n",
+       "      <th>N_atten_err</th>\n",
+       "      <th>general notes</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>proxy</td>\n",
-       "      <td>first_author_last_name</td>\n",
-       "      <td>publication_year</td>\n",
-       "      <td>doi</td>\n",
-       "      <td>age_ka</td>\n",
-       "      <td>Age_uncertainty_pos_ka</td>\n",
-       "      <td>Age_uncertainty_neg_ka</td>\n",
-       "      <td>CO2_ppm</td>\n",
-       "      <td>CO2_uncertainty_pos_ppm</td>\n",
-       "      <td>CO2_uncertainty_neg_ppm</td>\n",
-       "      <td>...</td>\n",
-       "      <td>cloud</td>\n",
-       "      <td>cloud_err</td>\n",
-       "      <td>N_cloud_err</td>\n",
-       "      <td>LAI</td>\n",
-       "      <td>LAI_err</td>\n",
-       "      <td>N_LAI_err</td>\n",
-       "      <td>attenuation</td>\n",
-       "      <td>atten_err</td>\n",
-       "      <td>N_atten_err</td>\n",
-       "      <td>general notes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>liverworts</td>\n",
        "      <td>Fletcher</td>\n",
        "      <td>2008</td>\n",
@@ -226,7 +178,7 @@
        "      <td>Inputs measured but CO2 not reported in Fletch...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>1</th>\n",
        "      <td>liverworts</td>\n",
        "      <td>Fletcher</td>\n",
        "      <td>2008</td>\n",
@@ -251,62 +203,46 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4 rows × 80 columns</p>\n",
+       "<p>2 rows × 80 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0              Unnamed: 1        Unnamed: 2  \\\n",
-       "0         NaN                     NaN               NaN   \n",
-       "1       proxy  first_author_last_name  publication_year   \n",
-       "2  liverworts                Fletcher              2008   \n",
-       "3  liverworts                Fletcher              2008   \n",
+       "        proxy first_author_last_name  publication_year  \\\n",
+       "0  liverworts               Fletcher              2008   \n",
+       "1  liverworts               Fletcher              2008   \n",
        "\n",
-       "                                          Unnamed: 3 Unnamed: 4  \\\n",
-       "0                                                NaN        NaN   \n",
-       "1                                                doi     age_ka   \n",
-       "2  10.1038/ngeo.2007.29 and 10.1111/j.1472-4669.2...      52200   \n",
-       "3                               10.1038/ngeo.2007.29      60400   \n",
+       "                                                 doi  age_ka  \\\n",
+       "0  10.1038/ngeo.2007.29 and 10.1111/j.1472-4669.2...   52200   \n",
+       "1                               10.1038/ngeo.2007.29   60400   \n",
        "\n",
-       "               Unnamed: 5              Unnamed: 6 Unnamed: 7  \\\n",
-       "0                     NaN                     NaN        NaN   \n",
-       "1  Age_uncertainty_pos_ka  Age_uncertainty_neg_ka    CO2_ppm   \n",
-       "2                  3600.0                  3600.0       1967   \n",
-       "3                  4600.0                  4600.0        683   \n",
+       "   Age_uncertainty_pos_ka  Age_uncertainty_neg_ka  CO2_ppm  \\\n",
+       "0                  3600.0                  3600.0     1967   \n",
+       "1                  4600.0                  4600.0      683   \n",
        "\n",
-       "                Unnamed: 8               Unnamed: 9  ... Unnamed: 70  \\\n",
-       "0                      NaN                      NaN  ...         NaN   \n",
-       "1  CO2_uncertainty_pos_ppm  CO2_uncertainty_neg_ppm  ...       cloud   \n",
-       "2                     1534                      875  ...        0.55   \n",
-       "3                      199                      201  ...        0.55   \n",
+       "   CO2_uncertainty_pos_ppm  CO2_uncertainty_neg_ppm  ... cloud cloud_err  \\\n",
+       "0                     1534                      875  ...  0.55       NaN   \n",
+       "1                      199                      201  ...  0.55       NaN   \n",
        "\n",
-       "  Unnamed: 71                                        Unnamed: 72 Unnamed: 73  \\\n",
-       "0         NaN                                                NaN         NaN   \n",
-       "1   cloud_err                                        N_cloud_err         LAI   \n",
-       "2         NaN  taken from Fletcher et al. (2008); no error is...         NaN   \n",
-       "3         NaN  taken from Fletcher et al. (2008); no error is...         NaN   \n",
+       "                                         N_cloud_err LAI LAI_err  \\\n",
+       "0  taken from Fletcher et al. (2008); no error is... NaN     NaN   \n",
+       "1  taken from Fletcher et al. (2008); no error is... NaN     NaN   \n",
        "\n",
-       "  Unnamed: 74                                        Unnamed: 75  Unnamed: 76  \\\n",
-       "0         NaN                                                NaN          NaN   \n",
-       "1     LAI_err                                          N_LAI_err  attenuation   \n",
-       "2         NaN  taken from Fletcher et al. (2008); the combine...          0.5   \n",
-       "3         NaN  taken from Fletcher et al. (2008); the combine...          0.5   \n",
+       "                                           N_LAI_err attenuation  atten_err  \\\n",
+       "0  taken from Fletcher et al. (2008); the combine...         0.5        NaN   \n",
+       "1  taken from Fletcher et al. (2008); the combine...         0.5        NaN   \n",
        "\n",
-       "  Unnamed: 77                                        Unnamed: 78  \\\n",
-       "0         NaN                                                NaN   \n",
-       "1   atten_err                                        N_atten_err   \n",
-       "2         NaN  taken from Fletcher et al. (2008); no error is...   \n",
-       "3         NaN  taken from Fletcher et al. (2008); no error is...   \n",
+       "                                         N_atten_err  \\\n",
+       "0  taken from Fletcher et al. (2008); no error is...   \n",
+       "1  taken from Fletcher et al. (2008); no error is...   \n",
        "\n",
-       "                                         Unnamed: 79  \n",
-       "0                                                NaN  \n",
-       "1                                      general notes  \n",
-       "2  Inputs measured but CO2 not reported in Fletch...  \n",
-       "3     data doi: and 10.1111/j.1472-4669.2012.00320.x  \n",
+       "                                       general notes  \n",
+       "0  Inputs measured but CO2 not reported in Fletch...  \n",
+       "1     data doi: and 10.1111/j.1472-4669.2012.00320.x  \n",
        "\n",
-       "[4 rows x 80 columns]"
+       "[2 rows x 80 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
