--- a/python_indrajala/examples/importers/RawTests.ipynb
+++ b/python_indrajala/examples/importers/RawTests.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "1397bd8e-64d2-4ea1-b036-e6240c29b69d",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "2410cbec-a887-4dbb-9f16-2f556a3495bc",
    "metadata": {},
    "outputs": [],
@@ -55,45 +55,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "8b8a146f-53ce-4f32-a2a6-f36932118e51",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-07-22 16:28:58,845 INFO root processing: data_sources/EuropeanMeanTemperatureSinceRomanTime_EuroMed2k.toml\n",
-      "/home/dsc/gith/domschl/indrajala/python_indrajala/examples/importers/downloader.py:64: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
-      "  return pd.read_csv(io.StringIO(data), sep=sep)\n",
-      "2022-07-22 16:28:58,858 INFO root processing: data_sources/DWDGermanJulyMeanTemperature.toml\n",
-      "2022-07-22 16:28:58,863 INFO root processing: data_sources/DWDGermanJuneMeanTemperature.toml\n",
-      "2022-07-22 16:28:58,868 INFO root processing: data_sources/DWDGermanAugustMeanTemperature.toml\n",
-      "2022-07-22 16:28:58,872 INFO root processing: data_sources/11000yearsunspotnumber.toml\n",
-      "2022-07-22 16:28:58,877 INFO root processing: data_sources/GISP2IceCoreTemperatureAlley2004.toml\n",
-      "2022-07-22 16:28:58,885 INFO root processing: data_sources/WikipediaGeologicTimeScales.toml\n",
-      "2022-07-22 16:28:59,035 INFO root processing: data_sources/SunspotsMonthlyMean.toml\n",
-      "2022-07-22 16:28:59,042 INFO root processing: data_sources/EarlyCenozoicLiverwortBryocarbCO2Data.toml\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dfs=download_datasets.get_datasets()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "c248bb65-8f1e-4044-8d6e-d5cbde9bbab7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['euromed2k', 'germany_july_meantemp', 'germany_june_meantemp', 'germany_august_meantemp', 'sunspots11000yrs', 'gisp2icecoretemp', 'gisp2icecoreaccum', 'geologictimescale', 'sunspotsmonthlymean1749', 'CenozoicCO2'])"
+       "dict_keys(['euromed2k', 'germany_july_meantemp', 'germany_june_meantemp', 'germany_august_meantemp', 'sunspots11000yrs', 'gisp2icecoretemp', 'gisp2icecoreaccum', 'geologictimescale', 'sunspotsmonthlymean1749', 'CenozoicCO2', 'CenozoicCO2Filtered'])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "f1da5ae5-d097-44af-ac96-5e658c11f475",
    "metadata": {},
    "outputs": [
@@ -129,126 +111,54 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>proxy</th>\n",
-       "      <th>first_author_last_name</th>\n",
-       "      <th>publication_year</th>\n",
-       "      <th>doi</th>\n",
        "      <th>age_ka</th>\n",
        "      <th>Age_uncertainty_pos_ka</th>\n",
        "      <th>Age_uncertainty_neg_ka</th>\n",
        "      <th>CO2_ppm</th>\n",
        "      <th>CO2_uncertainty_pos_ppm</th>\n",
        "      <th>CO2_uncertainty_neg_ppm</th>\n",
-       "      <th>...</th>\n",
-       "      <th>cloud</th>\n",
-       "      <th>cloud_err</th>\n",
-       "      <th>N_cloud_err</th>\n",
-       "      <th>LAI</th>\n",
-       "      <th>LAI_err</th>\n",
-       "      <th>N_LAI_err</th>\n",
-       "      <th>attenuation</th>\n",
-       "      <th>atten_err</th>\n",
-       "      <th>N_atten_err</th>\n",
-       "      <th>general notes</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>liverworts</td>\n",
-       "      <td>Fletcher</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>10.1038/ngeo.2007.29 and 10.1111/j.1472-4669.2...</td>\n",
        "      <td>52200</td>\n",
        "      <td>3600.0</td>\n",
        "      <td>3600.0</td>\n",
        "      <td>1967</td>\n",
        "      <td>1534</td>\n",
        "      <td>875</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.55</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>taken from Fletcher et al. (2008); no error is...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>taken from Fletcher et al. (2008); the combine...</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>taken from Fletcher et al. (2008); no error is...</td>\n",
-       "      <td>Inputs measured but CO2 not reported in Fletch...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>liverworts</td>\n",
-       "      <td>Fletcher</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>10.1038/ngeo.2007.29</td>\n",
        "      <td>60400</td>\n",
        "      <td>4600.0</td>\n",
        "      <td>4600.0</td>\n",
        "      <td>683</td>\n",
        "      <td>199</td>\n",
        "      <td>201</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.55</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>taken from Fletcher et al. (2008); no error is...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>taken from Fletcher et al. (2008); the combine...</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>taken from Fletcher et al. (2008); no error is...</td>\n",
-       "      <td>data doi: and 10.1111/j.1472-4669.2012.00320.x</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2 rows × 80 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        proxy first_author_last_name  publication_year  \\\n",
-       "0  liverworts               Fletcher              2008   \n",
-       "1  liverworts               Fletcher              2008   \n",
+       "   age_ka  Age_uncertainty_pos_ka  Age_uncertainty_neg_ka  CO2_ppm  \\\n",
+       "0   52200                  3600.0                  3600.0     1967   \n",
+       "1   60400                  4600.0                  4600.0      683   \n",
        "\n",
-       "                                                 doi  age_ka  \\\n",
-       "0  10.1038/ngeo.2007.29 and 10.1111/j.1472-4669.2...   52200   \n",
-       "1                               10.1038/ngeo.2007.29   60400   \n",
-       "\n",
-       "   Age_uncertainty_pos_ka  Age_uncertainty_neg_ka  CO2_ppm  \\\n",
-       "0                  3600.0                  3600.0     1967   \n",
-       "1                  4600.0                  4600.0      683   \n",
-       "\n",
-       "   CO2_uncertainty_pos_ppm  CO2_uncertainty_neg_ppm  ... cloud cloud_err  \\\n",
-       "0                     1534                      875  ...  0.55       NaN   \n",
-       "1                      199                      201  ...  0.55       NaN   \n",
-       "\n",
-       "                                         N_cloud_err LAI LAI_err  \\\n",
-       "0  taken from Fletcher et al. (2008); no error is... NaN     NaN   \n",
-       "1  taken from Fletcher et al. (2008); no error is... NaN     NaN   \n",
-       "\n",
-       "                                           N_LAI_err attenuation  atten_err  \\\n",
-       "0  taken from Fletcher et al. (2008); the combine...         0.5        NaN   \n",
-       "1  taken from Fletcher et al. (2008); the combine...         0.5        NaN   \n",
-       "\n",
-       "                                         N_atten_err  \\\n",
-       "0  taken from Fletcher et al. (2008); no error is...   \n",
-       "1  taken from Fletcher et al. (2008); no error is...   \n",
-       "\n",
-       "                                       general notes  \n",
-       "0  Inputs measured but CO2 not reported in Fletch...  \n",
-       "1     data doi: and 10.1111/j.1472-4669.2012.00320.x  \n",
-       "\n",
-       "[2 rows x 80 columns]"
+       "   CO2_uncertainty_pos_ppm  CO2_uncertainty_neg_ppm  \n",
+       "0                     1534                      875  \n",
+       "1                      199                      201  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dfs['CenozoicCO2']"
+    "dfs['CenozoicCO2Filtered']"
    ]
   },
   {
