--- a/python_indrajala/examples/importers/RawTests.ipynb
+++ b/python_indrajala/examples/importers/RawTests.ipynb
@@ -125,23 +125,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 54,
    "id": "c248bb65-8f1e-4044-8d6e-d5cbde9bbab7",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "dict_keys(['MaunaLoaMonthlyCO2', 'euromed2k', 'LawDome2006_CO2_CH4_N20', 'LawDome2006_CO2_Core_DSS_Eth1996', 'LawDome2006_CO2_Core_DSS_MacFM20042006', 'LawDome2006_CO2_Core_DE08-2_Eth1996', 'LawDome2006_CO2_Core_DE08-2_MacFM20042006', 'LawDome2006_CO2_Core_DE08_Eth1996', 'LawDome2006_CO2_Core_DE08_MacFM20042006', 'LawDome2006_CO2_Core_DSSW20Kfirn', 'LawDome2006_CO2_Core_CAPEGRIM', 'LawDome2006_CO2_All', 'LawDome2006_CH4_Core_DSS_Eth1996', 'LawDome2006_CH4_Core_DSS_MacFM20042006', 'LawDome2006_CH4_Core_DE08-2_Eth1996', 'LawDome2006_CH4_Core_DE08-2_MacFM20042006', 'LawDome2006_CH4_Core_DE08_Eth1996', 'LawDome2006_CH4_Core_DE08_MacFM20042006', 'LawDome2006_CH4_Core_DSSW20Kfirn', 'LawDome2006_CH4_Core_CAPEGRIM', 'LawDome2006_CH4_All', 'LawDome2006_N20_Core_DSS_MacFM20042006', 'LawDome2006_N20_Core_DSS08-2_MacFM20042006', 'LawDome2006_N20_Core_DSS08_MacFM20042006', 'LawDome2006_N20_Core_DSSW20Kfirn', 'LawDome2006_N20_Core_CAPEGRIM', 'LawDome2006_N20_All', 'MaunaLoaWeeklyHistoricalCO2', 'geologictimescale', 'germany_june_meantemp', 'sunspots11000yrs', 'germany_august_meantemp', 'germany_july_meantemp', 'sunspotsmonthlymean1749', 'LawDome2018CO2', 'gisp2icecoretemp', 'gisp2icecoreaccum', 'CenozoicCO2', 'CenozoicCO2Filtered'])"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Datasets: 39\n",
+      "----co2----:\n",
+      "MaunaLoaMonthlyCO2 LawDome2006_CO2_CH4_N20 LawDome2006_CO2_Core_DSS_Eth1996 LawDome2006_CO2_Core_DSS_MacFM20042006 LawDome2006_CO2_Core_DE08-2_Eth1996 LawDome2006_CO2_Core_DE08-2_MacFM20042006 LawDome2006_CO2_Core_DE08_Eth1996 LawDome2006_CO2_Core_DE08_MacFM20042006 LawDome2006_CO2_Core_DSSW20Kfirn LawDome2006_CO2_Core_CAPEGRIM LawDome2006_CO2_All LawDome2006_CH4_Core_DSS_Eth1996 LawDome2006_CH4_Core_DSS_MacFM20042006 LawDome2006_CH4_Core_DE08-2_Eth1996 LawDome2006_CH4_Core_DE08-2_MacFM20042006 LawDome2006_CH4_Core_DE08_Eth1996 LawDome2006_CH4_Core_DE08_MacFM20042006 LawDome2006_CH4_Core_DSSW20Kfirn LawDome2006_CH4_Core_CAPEGRIM LawDome2006_CH4_All LawDome2006_N20_Core_DSS_MacFM20042006 LawDome2006_N20_Core_DSS08-2_MacFM20042006 LawDome2006_N20_Core_DSS08_MacFM20042006 LawDome2006_N20_Core_DSSW20Kfirn LawDome2006_N20_Core_CAPEGRIM LawDome2006_N20_All MaunaLoaWeeklyHistoricalCO2 LawDome2018CO2 CenozoicCO2 CenozoicCO2Filtered \n",
+      "\n",
+      "----mauna_loa----:\n",
+      "MaunaLoaMonthlyCO2 MaunaLoaWeeklyHistoricalCO2 \n",
+      "\n",
+      "----direct_measurement----:\n",
+      "MaunaLoaMonthlyCO2 MaunaLoaWeeklyHistoricalCO2 germany_june_meantemp germany_august_meantemp germany_july_meantemp sunspotsmonthlymean1749 \n",
+      "\n",
+      "----temperature----:\n",
+      "euromed2k germany_june_meantemp germany_august_meantemp germany_july_meantemp gisp2icecoretemp gisp2icecoreaccum \n",
+      "\n",
+      "----tree_ring----:\n",
+      "euromed2k \n",
+      "\n",
+      "----europe----:\n",
+      "euromed2k \n",
+      "\n",
+      "----summer----:\n",
+      "euromed2k germany_june_meantemp germany_august_meantemp germany_july_meantemp \n",
+      "\n",
+      "----ch4----:\n",
+      "LawDome2006_CO2_CH4_N20 LawDome2006_CO2_Core_DSS_Eth1996 LawDome2006_CO2_Core_DSS_MacFM20042006 LawDome2006_CO2_Core_DE08-2_Eth1996 LawDome2006_CO2_Core_DE08-2_MacFM20042006 LawDome2006_CO2_Core_DE08_Eth1996 LawDome2006_CO2_Core_DE08_MacFM20042006 LawDome2006_CO2_Core_DSSW20Kfirn LawDome2006_CO2_Core_CAPEGRIM LawDome2006_CO2_All LawDome2006_CH4_Core_DSS_Eth1996 LawDome2006_CH4_Core_DSS_MacFM20042006 LawDome2006_CH4_Core_DE08-2_Eth1996 LawDome2006_CH4_Core_DE08-2_MacFM20042006 LawDome2006_CH4_Core_DE08_Eth1996 LawDome2006_CH4_Core_DE08_MacFM20042006 LawDome2006_CH4_Core_DSSW20Kfirn LawDome2006_CH4_Core_CAPEGRIM LawDome2006_CH4_All LawDome2006_N20_Core_DSS_MacFM20042006 LawDome2006_N20_Core_DSS08-2_MacFM20042006 LawDome2006_N20_Core_DSS08_MacFM20042006 LawDome2006_N20_Core_DSSW20Kfirn LawDome2006_N20_Core_CAPEGRIM LawDome2006_N20_All \n",
+      "\n",
+      "----n20----:\n",
+      "LawDome2006_CO2_CH4_N20 LawDome2006_CO2_Core_DSS_Eth1996 LawDome2006_CO2_Core_DSS_MacFM20042006 LawDome2006_CO2_Core_DE08-2_Eth1996 LawDome2006_CO2_Core_DE08-2_MacFM20042006 LawDome2006_CO2_Core_DE08_Eth1996 LawDome2006_CO2_Core_DE08_MacFM20042006 LawDome2006_CO2_Core_DSSW20Kfirn LawDome2006_CO2_Core_CAPEGRIM LawDome2006_CO2_All LawDome2006_CH4_Core_DSS_Eth1996 LawDome2006_CH4_Core_DSS_MacFM20042006 LawDome2006_CH4_Core_DE08-2_Eth1996 LawDome2006_CH4_Core_DE08-2_MacFM20042006 LawDome2006_CH4_Core_DE08_Eth1996 LawDome2006_CH4_Core_DE08_MacFM20042006 LawDome2006_CH4_Core_DSSW20Kfirn LawDome2006_CH4_Core_CAPEGRIM LawDome2006_CH4_All LawDome2006_N20_Core_DSS_MacFM20042006 LawDome2006_N20_Core_DSS08-2_MacFM20042006 LawDome2006_N20_Core_DSS08_MacFM20042006 LawDome2006_N20_Core_DSSW20Kfirn LawDome2006_N20_Core_CAPEGRIM LawDome2006_N20_All \n",
+      "\n",
+      "----icecore----:\n",
+      "LawDome2006_CO2_CH4_N20 LawDome2006_CO2_Core_DSS_Eth1996 LawDome2006_CO2_Core_DSS_MacFM20042006 LawDome2006_CO2_Core_DE08-2_Eth1996 LawDome2006_CO2_Core_DE08-2_MacFM20042006 LawDome2006_CO2_Core_DE08_Eth1996 LawDome2006_CO2_Core_DE08_MacFM20042006 LawDome2006_CO2_Core_DSSW20Kfirn LawDome2006_CO2_Core_CAPEGRIM LawDome2006_CO2_All LawDome2006_CH4_Core_DSS_Eth1996 LawDome2006_CH4_Core_DSS_MacFM20042006 LawDome2006_CH4_Core_DE08-2_Eth1996 LawDome2006_CH4_Core_DE08-2_MacFM20042006 LawDome2006_CH4_Core_DE08_Eth1996 LawDome2006_CH4_Core_DE08_MacFM20042006 LawDome2006_CH4_Core_DSSW20Kfirn LawDome2006_CH4_Core_CAPEGRIM LawDome2006_CH4_All LawDome2006_N20_Core_DSS_MacFM20042006 LawDome2006_N20_Core_DSS08-2_MacFM20042006 LawDome2006_N20_Core_DSS08_MacFM20042006 LawDome2006_N20_Core_DSSW20Kfirn LawDome2006_N20_Core_CAPEGRIM LawDome2006_N20_All LawDome2018CO2 gisp2icecoretemp gisp2icecoreaccum \n",
+      "\n",
+      "----antarctica----:\n",
+      "LawDome2006_CO2_CH4_N20 LawDome2006_CO2_Core_DSS_Eth1996 LawDome2006_CO2_Core_DSS_MacFM20042006 LawDome2006_CO2_Core_DE08-2_Eth1996 LawDome2006_CO2_Core_DE08-2_MacFM20042006 LawDome2006_CO2_Core_DE08_Eth1996 LawDome2006_CO2_Core_DE08_MacFM20042006 LawDome2006_CO2_Core_DSSW20Kfirn LawDome2006_CO2_Core_CAPEGRIM LawDome2006_CO2_All LawDome2006_CH4_Core_DSS_Eth1996 LawDome2006_CH4_Core_DSS_MacFM20042006 LawDome2006_CH4_Core_DE08-2_Eth1996 LawDome2006_CH4_Core_DE08-2_MacFM20042006 LawDome2006_CH4_Core_DE08_Eth1996 LawDome2006_CH4_Core_DE08_MacFM20042006 LawDome2006_CH4_Core_DSSW20Kfirn LawDome2006_CH4_Core_CAPEGRIM LawDome2006_CH4_All LawDome2006_N20_Core_DSS_MacFM20042006 LawDome2006_N20_Core_DSS08-2_MacFM20042006 LawDome2006_N20_Core_DSS08_MacFM20042006 LawDome2006_N20_Core_DSSW20Kfirn LawDome2006_N20_Core_CAPEGRIM LawDome2006_N20_All LawDome2018CO2 \n",
+      "\n",
+      "----time_interval_names----:\n",
+      "geologictimescale \n",
+      "\n",
+      "----germany----:\n",
+      "germany_june_meantemp germany_august_meantemp germany_july_meantemp \n",
+      "\n",
+      "----sunspots----:\n",
+      "sunspots11000yrs sunspotsmonthlymean1749 \n",
+      "\n",
+      "----greenland----:\n",
+      "gisp2icecoretemp gisp2icecoreaccum \n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "dfs.keys()"
+    "print(f\" Datasets: {len(dfs.keys())}\")\n",
+    "tags=[]\n",
+    "for ds in dfs:\n",
+    "    for tag in dfs[ds]['metadata']['tags']:\n",
+    "        if tag not in tags:\n",
+    "            tags.append(tag)\n",
+    "for tag in tags:\n",
+    "    print(f\"----{tag}----:\")\n",
+    "    for ds in dfs:\n",
+    "        if tag in dfs[ds]['metadata']['tags']:\n",
+    "            print(f\"{ds} \", end=\"\")\n",
+    "    print()\n",
+    "    print()"
    ]
   },
   {
