Namespace separation for events, cmd

--- a/python_indrajala/examples/importers/RawTests.ipynb
+++ b/python_indrajala/examples/importers/RawTests.ipynb
@@ -30,7 +30,11 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "from IPython.display import display, HTML"
+    "from IPython.display import display\n",
+    "try:\n",
+    "    from IPython.display import HTML\n",
+    "except ImportError:\n",
+    "    from IPython.core.display import HTML"
    ]
   },
   {
