--- a/python_indrajala/indralib/tests/indra_test.ipynb
+++ b/python_indrajala/indralib/tests/indra_test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -33,15 +33,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-06-10 14:44:13.830237\n",
-      "2023-02-06 12:35:59.999997\n",
+      "2023-06-10 15:32:05.048232\n",
+      "2023-02-06 12:35:59.999997+00:00\n",
       "2023.1\n"
      ]
     }
@@ -88,9 +88,11 @@
    "source": [
     "## Testdata for Julian date conversions\n",
     "\n",
-    "| Source | JD            | Calendar            | Unix             |\n",
-    "| ------ | ------------- | ------------------- | ---------------- |\n",
-    "| WP     | 2460106.09236 | 2023-06-10 14:13 UT | "
+    "| Source | JD             | Calendar            |\n",
+    "| ------ | -------------- | ------------------- |\n",
+    "| WP     | 2460106.09236  | 2023-06-10 14:13 UT |\n",
+    "| WP     | 2456293.520833 | 2013-01-01 00:30 UT |\n",
+    "| R.D.   | 1721424.5      |"
    ]
   },
   {
@@ -100,26 +102,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2460107.092361111\n",
-      "2023-06-11 14:13:00.000007\n"
+      "2460106.092361111\n",
+      "2023-06-10 14:13:00.000007+00:00\n"
      ]
     }
    ],
    "source": [
     "# Define datetime as UTC timezone:\n",
-    "dt = datetime.datetime(2023, 6, 10, 14, 13)\n",
-    "dt = dt.replace(tzinfo=datetime.timezone.utc)\n",
+    "dt = datetime.datetime(2023, 6, 10, 14, 13, tzinfo=datetime.timezone.utc)\n",
     "jd = IndraEvent.datetime2julian(dt)\n",
     "print(jd)\n",
     "dt = IndraEvent.julian2datetime(jd)\n",
     "print(dt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1721425.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt = IndraEvent.julian2datetime(1721423.5)\n",
+    "jd = IndraEvent.datetime2julian(dt)\n",
+    "print(jd)"
    ]
   },
   {
